--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,6 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+
+Josphine Wamiti <jwahu30@gmail.com>
+Paul Kirugu <pkirugu.chege111@gmail.com>
